adding auth key
